# hw4

./: .gitignore  CMakeLists.txt  Expressions.cpp  Expressions.h  Interpreter.cpp  Interpreter.h  Main.cpp  README.md  SymbolicMemory.cpp  SymbolicMemory.h  example.txt
tests/: CMakeLists.txt  ExprTests.cpp  InterprTests.cpp
